# reakeyfinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: FindKeyfinder.cmake  IsStaticLibrary.cmake
keyfinder/: CMakeLists.txt
minibpm/: CMakeLists.txt  MiniBpm.cpp  MiniBpm.h
src/: CMakeLists.txt  main.cpp  my_plugin.cpp  my_plugin.h  reakeyfinder_dbgtools.h
src/integrations/: integrations.cpp  integrations.hpp
src/scripts/: ReaKeyfinder.lua
src/utils/: utils.cpp  utils.hpp
