cmake_minimum_required(VERSION 3.15)
project(minibpm LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

file(GLOB MINIBPM_SOURCES CONFIGURE_DEPENDS
  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)
file(GLOB MINIBPM_HEADERS CONFIGURE_DEPENDS
  ${CMAKE_CURRENT_SOURCE_DIR}/*.h
)

add_library(minibpm STATIC ${MINIBPM_SOURCES} ${MINIBPM_HEADERS})
target_include_directories(minibpm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})


